[package]
name = "threaded-capture"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png"]

[dependencies.nokhwa]
path = "../.."
# EDIT THIS!
features = ["input-native", "output-threaded"]
